--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Paul McAvoy's GITHUB - Homepage</title>
+    <title>Paul McAvoy - Home</title>
   </head>
   <body>
 
