--- a/about.html
+++ b/about.html
@@ -2,3 +2,10 @@
 layout: page
 title: About Me
 ---
+
+<h2>Who am I?</h2>
+<p>I am a Computing Science Student currently completing my second year of a Masters of Computing Science degree at The University of Strathclyde. I mainly program in Java and Python, however I have some experience in C# aswell and have worked with the low level language MARS within my University course. I also have some experience working in some spaces of web development specifically with HTML, CSS, and Javascript and I am learning all about Jekyll and the Jekyll Structure through making this website.</p>
+<h2>What is this?</h2>
+<p>This is my website/blog were I'm going to write about and discuss my projects and progress in the fields of Computing Science.</p>
+<h2>CV</h2>
+<p>My CV can be viewed <a href="https://drive.google.com/file/d/1bHyllJpYZ3FzamaEyXhnUV5UhnOJ9D4P/view?usp=sharing">here</a>.</p>
